--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Mumimal is a mumi minimal blog generator.",
   "main": "index.js",
+  "bin": {
+    "mumimal": "./cli.js"
+  },
   "author": "wabilin",
   "license": "MIT",
   "private": false
