--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "ejs": "^3.1.3",
     "gray-matter": "^4.0.2",
     "marked": "^1.1.0"
   }
