--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "private": false,
   "dependencies": {
     "ejs": "^3.1.3",
+    "feed": "^4.2.0",
     "gray-matter": "^4.0.2",
+    "jsdom": "^16.2.2",
     "marked": "^1.1.0"
   }
 }
