--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "feed": "^4.2.0",
     "gray-matter": "^4.0.2",
     "jsdom": "^16.2.2",
-    "marked": "^1.1.0"
+    "marked": "^1.1.0",
+    "yargs": "^15.4.0"
   }
 }
