--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.3",
     "feed": "^4.2.0",
     "gray-matter": "^4.0.2",
+    "html-minifier-terser": "^5.1.1",
     "jsdom": "^16.2.2",
     "marked": "^1.1.0",
     "yargs": "^15.4.0"
