update package json for release

--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "jsdom": "^16.2.2",
     "marked": "^1.1.0",
     "yargs": "^15.4.0"
-  }
+  },
+  "keywords": ["blog"],
+  "homepage": "https://github.com/wabilin/mumimal",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wabilin/mumimal.git"
+  },
+  "engines" : { "node" : ">=14" }
 }
