--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html-minifier-terser": "^5.1.1",
     "jsdom": "^16.2.2",
     "marked": "^1.1.0",
+    "sitemap": "^6.2.0",
     "yargs": "^15.4.0"
   },
   "keywords": [
